plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.78'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

repositories {
    maven { name = 'Modrinth Maven'; url = 'https://api.modrinth.com/maven' }
    maven { name = 'BlameJared Maven'; url = 'https://maven.blamejared.com' }
    mavenLocal()
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroup("software.bernie.geckolib")
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = 'SmartBrainLib'
                url = 'https://dl.cloudsmith.io/public/tslat/sbl/maven/'
            }
        }
        filter {
            includeGroup('net.tslat.smartbrainlib')
        }
    }
}

base {
    archivesName = "$mod_id-$minecraft_version"
    group = mod_group_id
    version = mod_version
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            description = "Runs the Minecraft client for dev testing."

            // JVM memory & LWJGL natives
            // Adjusted to safer values: max 2GB heap, initial 1GB
            jvmArgument "-Xmx2G"
            jvmArgument "-Xms1G"
            jvmArgument "-XX:+UseG1GC"
            jvmArgument "-Dorg.lwjgl.librarypath=${projectDir}/run/natives"
            // Random username for every launch
            jvmArgument "-Dminecraft.username=Dev${Math.abs(new Random().nextInt())}"

            // System properties
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            description = "Runs the Minecraft server for dev testing."

            // Reduced memory to fit lower-end systems
            jvmArgument "-Xmx1G"
            jvmArgument "-Xms512M"
            jvmArgument "-XX:+UseG1GC"
            jvmArgument "-Dorg.lwjgl.librarypath=${projectDir}/run/natives"

            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            description = "Runs the GameTestServer for automated tests."

            jvmArgument "-Xmx1G"
            jvmArgument "-Xms512M"
            jvmArgument "-XX:+UseG1GC"
            jvmArgument "-Dorg.lwjgl.librarypath=${projectDir}/run/natives"

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            description = "Generates data files for the mod."

            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath

            jvmArgument "-Xmx1G"
            jvmArgument "-Xms512M"
            jvmArgument "-XX:+UseG1GC"
            jvmArgument "-Dorg.lwjgl.librarypath=${projectDir}/run/natives"
        }
    }


    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"
    implementation "net.tslat.smartbrainlib:SmartBrainLib-neoforge-${project.minecraft_version}:${sbl_version}"
    implementation("foundry.veil:veil-neoforge-1.21.1:1.0.0.242") {
        exclude group: "maven.modrinth"
    }
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.WARN
}
